[FIX][UI] Boosted theme - fix color contrast in code block. Thanks, J-M.
(cherry picked from commit a1558bf2bc9ef518fc14631eb6e7a5febe65807a)

--- a/themes/boosted/css/boosted.css
+++ b/themes/boosted/css/boosted.css
@@ -223,8 +223,7 @@ pre {
   margin-top: 0;
   margin-bottom: 1rem;
   overflow: auto;
-  font-size: 0.875em;
-  color: var(--o-pre-color, #333);
+  font-size: 0.875rem;
 }
 pre code {
   font-size: inherit;
@@ -232,7 +231,7 @@ pre code {
   word-break: normal;
 }
 code {
-  font-size: 0.875em;
+  font-size: 0.875rem;
   color: var(--bs-code-color);
   word-wrap: break-word;
 }
@@ -240,10 +239,10 @@ a > code {
   color: inherit;
 }
 kbd {
-  padding: 0.0625rem 0.0625rem;
-  font-size: 0.875em;
-  color: var(--o-kbd-color, #000);
-  background-color: var(--o-kbd-bg, #eee);
+  padding: 0.1875rem 0.375rem;
+  font-size: 0.875rem;
+  color: var(--bs-body-bg);
+  background-color: var(--bs-body-color);
 }
 kbd kbd {
   padding: 0;
@@ -10550,13 +10549,13 @@ div.drillshow {
 code, pre.codelisting {
   background: #fafafa;
   border: 0.125rem solid transparent;
-  padding: 0.0625rem 0.0625rem;
+  padding: 0.1875rem 0.375rem;
 }
 code {
   color: #333;
 }
 pre.codelisting {
-  color: var(--o-kbd-bg, #eee);
+  color: var(--bs-body-color);
   border-color: #000;
   border-radius: 0.375rem;
 }
@@ -12852,12 +12851,9 @@ div.ts-wrapperdiv div.ts-pager .right-margin {
   font-size: 1rem;
 }
 .tiki .toastui-editor-contents code {
-  font-size: 0.875em;
+  font-size: 0.875rem;
   color: #333;
   background-color: #fafafa;
-}
-.tiki .toastui-editor-contents pre {
-  color: var(--o-pre-color, #333);
 }
 .tiki .toastui-editor-contents table {
   background-color: #fff;
@@ -12998,4 +12994,4 @@ div.ts-wrapperdiv div.ts-pager .right-margin {
   background-position: 0.375rem 50%, 100% 0;
   background-size: 0.9375rem, 1.625rem;
 }
-/*# sourceMappingURL=boosted.css.map */
+
